--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     },
     "keywords": [],
     "author": "@space1worm",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "typescript": "^4.9.4"
+    }
 }
